@@ -1,3 +1,7 @@
+2021-01-20  Dirk Eddelbuettel  <edd@debian.org>
+
+        * .github/workflows/ci.yaml: Add CI runner using r-ci
+
 2014-09-04  Dirk Eddelbuettel  <edd@debian.org>
 
 	* src/int_overflow.cpp: New overflow example for undefined behavior
